update name to lowercause (some stupid npm thing)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "httpRequestParser",
-  "version": "0.0.2",
+  "name": "httprequestparser",
+  "version": "0.0.3",
   "description": "Parses HTTP responses from POST and GET requests",
   "main": "index.js",
   "scripts": {
